# Computacion-Paralela-Navier-Stokes-

./: .gitignore  Makefile  README.md  demo.c  headless.c  indices.h  informe  meson.build  solver.c  solver.h  solver_block.c  timing.c  timing.h
navierstokes-redblack/: Makefile  demo.c  demo.i  demo.s  demo_gpu.cu  headless.c  headless.i  headless.s  headless_gpu.cu  indices.h  solver.c  solver.h  solver.i  solver.s  solver_gpu.cu  solver_vect.c  solver_vect_openmp.c  solver_vect_openmp.i  solver_vect_openmp.s  timing.i  timing.s  }
